; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_rtl8723b_phycfg.c_PHY_SetRFReg_8723B.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_rtl8723b_phycfg.c_PHY_SetRFReg_8723B.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@bRFRegOffsetMask = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PHY_SetRFReg_8723B(%struct.adapter* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.adapter*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* @bRFRegOffsetMask, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %31

16:                                               ; preds = %5
  %17 = load %struct.adapter*, %struct.adapter** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @phy_RFSerialRead_8723B(%struct.adapter* %17, i32 %18, i32 %19)
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @phy_CalculateBitShift(i32 %21)
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %9, align 4
  %25 = xor i32 %24, -1
  %26 = and i32 %23, %25
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %12, align 4
  %29 = shl i32 %27, %28
  %30 = or i32 %26, %29
  store i32 %30, i32* %10, align 4
  br label %31

31:                                               ; preds = %16, %5
  %32 = load %struct.adapter*, %struct.adapter** %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @phy_RFSerialWrite_8723B(%struct.adapter* %32, i32 %33, i32 %34, i32 %35)
  ret void
}

declare dso_local i32 @phy_RFSerialRead_8723B(%struct.adapter*, i32, i32) #1

declare dso_local i32 @phy_CalculateBitShift(i32) #1

declare dso_local i32 @phy_RFSerialWrite_8723B(%struct.adapter*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
